# fastapi-transformers

./: .gitignore  Dockerfile  README.md  app.py  deploy-app.sh  pyproject.toml  serve_app.py  update-deployment.sh
.github/workflows/: docker-image.yml  infra_deployment.yml
docs/: ray-cluster-setup.md
infra/azure/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tf  variables.tf
infra/azure/terraform/modules/backend/: main.tf  outputs.tf  variables.tf
infra/azure/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infra/k8s/: k-deployment.yml  k-pod.yml  k-service.yml  rayservice-loadbalancer.yml  rayservice.yml
openspec/: project.md
openspec/changes/add-ray-cluster-setup/: design.md  proposal.md  tasks.md
openspec/changes/add-ray-cluster-setup/specs/ray-cluster/: spec.md
pipelines/: azure-pipelines.yml
routers/models/text_gen/: simple_input.py
routers/text/: router.py
tests/: test__text-gen.py  test_ray_serve.py
